# nq-nqp-rx

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CREDITS  FindLLVM.cmake  Makefile  README.pod  test.nqp
docs/: AST Nodes.graffle  Object Meta-model Map.graffle  complization_process.pod  roadmap.pod
editors/NQ-NQP_Xcode/: NQ-NQP_Xcode.1
editors/NQ-NQP_Xcode/NQ-NQP_Xcode.xcodeproj/: john.mode1v3  john.pbxuser  project.pbxproj
include/: codegen.h  node.h  objects.h
src/: Codegen.cpp  Codegen.hpp  Node.cpp  Node.hpp  Node_Builder.cpp  P6Opaque.hpp  Regex.cpp  Regex.hpp  ast_pass.cpp  ast_pass.h  codegen.cpp  codegen.h  dispatcher.cpp  grammar.y  grammar.yy  main.cpp  methods.cpp  node.cpp  node.h  node.hpp  node_builder.cpp  parser.cpp  regex.cpp  runtime_support.cpp  runtime_support.h  test_main.cpp  tokens.l  types.h  vm.cpp  vm.h
src/Parser/: Grammar.cpp  Grammar.hpp  Grammar.output  Grammar.yy  Tokens.cpp  Tokens.l  location.hh  position.hh  tokens.l
src/builtin/: Attribute.hpp  Mu.hpp
src/parser/: grammar.cpp  grammar.hpp  grammar.output  grammar.yy  location.hh  parser.y  position.hh  stack.hh  tokens.cpp  tokens.l
t/: basics.nqp  simple-loops.nqp  simple-math.nqp  simple-rx.nqp  simple.nqp
